# backup_gdrive

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  test.py
app/: main.py  test.py  utils.py
